--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -1,32 +1,39 @@
 
 .list {
     list-style: none;
-    margin-top: 0;
+    /* margin-top: 110px; */
     justify-content: space-around;
     position: absolute;
-    width: 300px;
-    height: calc(100% * 6);
+    width: 90%;
+    max-width: 300px;
+    /* height: calc(100% * 6); */
+    height: 900px;
     right: 0%;
-    transform: translateX(110%);
+    /* float: right; */
+    transform: translateX(100%);
     background-color: rgba(110, 235, 249,0.5);
     transition: all 0.5s;
     border-radius: 20px 0 0 20px;
     -webkit-border-radius: 20px 0 0 20px;
     -moz-border-radius: 20px 0 0 20px;
+    /* display: none; */
+    /* overflow-x: hidden; */
 }
 
 .list li {
     
     text-align: left;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    /* margin-top: 30px; */
+    margin-bottom: calc(100% / 6);
     font-size: 28px;
+    /* padding: 20%; */
     height: 50px;
     font-weight:bold;
     cursor: pointer;
     position: relative;
-    padding: 0px;
+    padding: 0%;
     display: block;
+    /* border: dashed deeppink 1px; */
   }
     
   
@@ -47,6 +54,7 @@
     border-top-color: rgba(255,255,255,0.5);
     border-bottom-color: rgba(255,255,255,0.5);
     transform: scale(0.1, 1);
+    /* margin-top: 20px; */
   }
   .list li:hover {
     letter-spacing: 2px;
@@ -69,7 +77,8 @@
 .img {
     width: 80px;
     height: 80px;
-    /* position: absolute; */
+    right: 0%;
+    /* position: relative; */
     /* left: calc(0% - 40px); */
     cursor: pointer;
     border-radius: 50%;
