--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -7,7 +7,9 @@
     width: 90%;
     max-width: 300px;
     /* height: calc(100% * 6); */
-    height: 900px;
+    height: 50%;
+    max-height: 900px;
+    min-height: 400px;
     right: 0%;
     /* float: right; */
     transform: translateX(100%);
@@ -23,11 +25,11 @@
 .list li {
     
     text-align: left;
-    /* margin-top: 30px; */
-    margin-bottom: calc(100% / 6);
+    margin-top: 5%;
+    /* margin-bottom: calc(100% / 6); */
     font-size: 28px;
     /* padding: 20%; */
-    height: 50px;
+    height: 15%;
     font-weight:bold;
     cursor: pointer;
     position: relative;
