--- a/app/view/css/form.css
+++ b/app/view/css/form.css
@@ -69,6 +69,7 @@
     color: var(--ColorMainFont);
     font-weight: bold;
     width: calc(100% - 38px);
+    margin-bottom: 5px;
 }
   
   .submit:hover{
