--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -3,15 +3,23 @@
     list-style: none;
     /* margin-top: 110px; */
     justify-content: space-around;
+    /* position: sticky; */
+    /* position: static; */
     position: absolute;
-    width: 90%;
+    /* position: ; */
+    /* display: block; */
+    width: 50%;
     max-width: 300px;
     /* height: calc(100% * 6); */
-    height: 50%;
-    max-height: 900px;
-    min-height: 400px;
-    right: 0%;
+    /* height: 50%; */
+    height: 600px;
+    /* min-height: 600px; */
+    /* position: absolute; */
     /* float: right; */
+    right: 0%;
+    /* margin-top: -100%; */
+    /* float: inline-start; */
+    /* top: 0%; */
     transform: translateX(100%);
     background-color: rgba(110, 235, 249,0.5);
     transition: all 0.5s;
@@ -19,23 +27,25 @@
     -webkit-border-radius: 20px 0 0 20px;
     -moz-border-radius: 20px 0 0 20px;
     /* display: none; */
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 .list li {
     
     text-align: left;
-    margin-top: 5%;
+    margin-top: calc(100% / 8);
+    /* margin-top: auto; */
     /* margin-bottom: calc(100% / 6); */
     font-size: 28px;
     /* padding: 20%; */
-    height: 15%;
+    height: calc(100% / 8);
+    /* justify-content: space-between; */
+    /* max-height: 70px; */
     font-weight:bold;
     cursor: pointer;
-    position: relative;
-    padding: 0%;
-    display: block;
-    /* border: dashed deeppink 1px; */
+    /* display: block; */
+    /* position: absolute; */
+    /* position: relative; */
   }
     
   
@@ -57,6 +67,7 @@
     border-bottom-color: rgba(255,255,255,0.5);
     transform: scale(0.1, 1);
     /* margin-top: 20px; */
+    /* margin-bottom: 40%; */
   }
   .list li:hover {
     letter-spacing: 2px;
@@ -94,8 +105,10 @@
   }
 
   .show , .show li{
-    display: block;
+    /* display: block; */
     transform: translateX(10%);
+    /* width: 50%; */
+
     /* display: none; */
   }
 
@@ -104,6 +117,9 @@
       height: 100px;
       width: 100px;
     }
+    /* .show, .show li{
+      display: inline-block;
+    } */
   }
 
   
