fix layout menu
Signed-off-by: alizaynoune <jokir.zaynoune@gmail.com>

--- a/app/view/css/form.css
+++ b/app/view/css/form.css
@@ -7,6 +7,7 @@
     display: inline-block;
     margin-left: 15%;
     margin-top: 20px;
+    /* position: absolute; */
     /* border: dashed deeppink 1px; */
 }
 
