--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -11,6 +11,22 @@
     border-radius: 50%;
 }
 
+#canva_id img, #video_id img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    /* display: inline-flex; */
+    position: absolute;
+    /* float: left; */
+    left: 0%;
+    margin: 0%;
+    /* position: fixed; */
+
+    /* left: 20px; */
+    /* top: 20px; */
+    /* transform: translate(-100px, 20px); */
+}
+
 .div_video{
     display: inline-flex;
     /* border: forestgreen dashed 2px; */
@@ -27,6 +43,9 @@
     max-width: 800px;
     max-height: 800px;
     padding: 0%;
+    
+    /* display: block; */
+    /* display: flexbox; */
     /* margin: 0%; */
     /* display: inline; */
     /* display: inline; */
@@ -43,6 +62,7 @@
     padding: 0%;
     /* right: 0%; */
     margin: 0%;
+    /* display: inline-flex; */
     /* float: right; */
     /* display: inline; */
     /* background-color: fuchsia; */
