--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -12,7 +12,8 @@
     max-width: 300px;
     /* height: calc(100% * 6); */
     /* height: 50%; */
-    height: 0px;
+    /* height: 0px; */
+    height: 500px;
     /* margin-left: 0%; */
     /* min-height: 600px; */
     position: absolute;
@@ -35,17 +36,19 @@
 .list li {
     transform: translateX(100%);
     text-align: left;
-    margin-top: 0%;
+    /* margin-top: 0%; */
     /* margin-top: auto; */
     /* margin-bottom: calc(100% / 6); */
     font-size: 28px;
     /* padding: 20%; */
-    height: 0%;
+    /* height: 0%; */
     max-height: 80px;
     /* justify-content: space-between; */
     /* max-height: 70px; */
     font-weight:bold;
     cursor: pointer;
+    height: calc(100% / 9);
+    margin-top: calc(100% / 8);
     /* display: block; */
     /* position: absolute; */
     /* position: relative; */
@@ -58,7 +61,7 @@
     content: '';
     position: absolute;
     width: 100%;
-    height: 0%;
+    height: 100%;
     max-height: 80px;
     z-index: 1;
     opacity: 0;
@@ -101,18 +104,6 @@
     border-radius: 50%;
 }
 
-.show li::before{
-  height: 100%;
-
-}
-
-.show li {
-  height: calc(100% / 9);
-  margin-top: calc(100% / 8);
-
-}
-
-.show{height: 500px;}
 .show , .show li{
   transform: translateX(0%);
 
