--- a/app/view/css/Colors.css
+++ b/app/view/css/Colors.css
@@ -11,4 +11,5 @@
     --Success:      #33FF3C;
     --Error:        #FF0000;
     --ColorX: repeating-linear-gradient( var(--Color0), var(--Color1), var(--Color2), var(--Color3), var(--Color4));
+    /* --ColorX: #eff; */
 }
