--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -12,34 +12,104 @@
     cursor: pointer;
     /* cursor: move; */
 }
-
-#canva_id img, #video_id img{
+.filter{
+    border: 1px dashed red;
     width: 40px;
     height: 40px;
-    border-radius: 50%;
-    /* display: inline-flex; */
-    position: absolute;
-    /* position: sticky; */
-    /* z-index: 1000; */
-    /* display: flex; */
-    /* position: relative; */
-    /* float: left; */
-    /* left: 0%; */
-    /* resize: both;
-    overflow: auto; */
     padding: 0%;
     margin: 0%;
-    cursor: move;
-    /* position: fixed; */
-
-    /* left: 20px; */
-    /* top: 20px; */
-    /* transform: translate(-100px, 20px); */
+    border-radius: 50%;
+    /* position: relative; */
+    position: absolute;
+    resize: both; 
+    overflow-y: hidden;
 }
+/* #canva_id img, #video_id img{ */
+.filter img{
+    /* width: 40px;
+    height: 40px; */
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    /* display: inline-flex; */
+    /* position: absolute; */
+    box-sizing: border-box;
+    padding: 0%;
+    margin: 0%;
+}
+
+
+
+.filter .resize{
+    width: 5px;
+    height: 5px;
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    padding: 0%;
+    margin: 0%;
+    cursor: nwse-resize;
+    background-color: black;
+    display: none;
+}
+
+.filter .rotate{
+    width: 4px;
+    height: 4px;
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    margin: 0%;
+    padding: 0%;
+    /* cursor: nesw-resize; */
+    cursor: pointer;
+    background-color: green;
+}
+
+.filter .delet{
+    width: 5px;
+    height: 5px;
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    cursor: pointer;
+}
+.filter .delet::before{
+    font-family: "FontAwesome";
+    content: "\f057";
+    font-size: 12px;
+}
+
+/* .resize .bottomRight{
+    width: 5px;
+    height: 5px;
+    position: absolute;
+    margin: 0%;
+    padding: 0%;
+    bottom: 0%;
+    right: 0%;
+    background-color: black;
+} */
+
+.filter .bottomLeft{
+    width: 5px;
+    height: 5px;
+    position: absolute;
+    margin: 0%;
+    padding: 0%;
+    bottom: 0%;
+    left: 0%;
+    cursor: pointer;
+    /* cursor: nesw-resize; */
+    background-color: black;
+
+}
+
+
+/* .resize div{cursor: nesw-resize;} */
 
 .div_video{
     display: inline-flex;
-    /* border: forestgreen dashed 2px; */
     width: 100%;
     height: 100%;
 }
@@ -58,6 +128,7 @@
     max-height: 800px;
     padding: 0%;
     position: relative;
+    /* overflow: hidden; */
     /* display: flex; */
     /* display: block; */
     
@@ -67,15 +138,15 @@
     /* display: inline; */
     /* display: inline; */
 }
-/* #video {width: 90%; height: 90%; padding: 0%; margin: 0%;} */
 
 #canva_id{
     /* border: red dashed 2px; */
     width: 600px;
-    height: auto;
+    height: 300px;
     margin-left: 0.5%;
-    display: block;
+    /* display: block; */
     position: relative;
+    /* overflow: hidden; */
     /* display: inline-block; */
     /* max-width: 800px;
     max-height: 800px; */
