--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -13,7 +13,7 @@
     /* cursor: move; */
 }
 .filter{
-    border: 1px dashed red;
+    /* border: 1px dashed red; */
     width: 40px;
     height: 40px;
     padding: 0%;
@@ -21,8 +21,8 @@
     border-radius: 50%;
     /* position: relative; */
     position: absolute;
-    resize: both; 
-    overflow-y: hidden;
+    /* resize: both; 
+    overflow-y: hidden; */
 }
 /* #canva_id img, #video_id img{ */
 .filter img{
@@ -50,7 +50,7 @@
     margin: 0%;
     cursor: nwse-resize;
     background-color: black;
-    display: none;
+    /* display: none; */
 }
 
 .filter .rotate{
@@ -108,7 +108,7 @@
 
 /* .resize div{cursor: nesw-resize;} */
 
-.div_video{
+.contener_video{
     display: inline-flex;
     width: 100%;
     height: 100%;
@@ -215,7 +215,7 @@
 }
 
 /* @media only screen and (max-width: 1200){
-    .div_video{
+    .contener_video{
         display: inline-block;
         height: 100%;
     }
@@ -224,7 +224,7 @@
 @media only screen and (max-width: 1200px){
     .leftBtn{left: 5%;}
     .rightBtn{right: 5%;}
-    .div_video{height: 100%; display: inline-block;}
+    .contener_video{height: 100%; display: inline-block;}
     /* #video_id{width: 99%; height: 49%;}
     #canva_id{width: 99%; height: 49%; margin-left: 0.5%;} */
     /* #hidden_canva{display: none;} */
