--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -48,7 +48,8 @@
     right: 0%;
     padding: 0%;
     margin: 0%;
-    cursor: nwse-resize;
+    /* cursor: nwse-resize; */
+    cursor: se-resize;
     background-color: black;
     /* display: none; */
 }
