start sed data from camera to backend
Signed-off-by: alizaynoune <simo.jokir@gmail.com>

--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -210,7 +210,7 @@
 .control-stickers .control::after{content: '\f2ab'}
 
 .hiddenBtn{
-    display: none;
+    display: none !important;
     height: 0;
     width: 0;
     opacity: 0;
