up valid sessionStatus
Signed-off-by: alizaynoune <simo.jokir@gmail.com>

--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -216,6 +216,8 @@
     opacity: 0;
 }
 
+#hiddenCanva{display: none; background-color: green;}
+
 /* @media only screen and (max-width: 1200){
     .contener_video{
         display: inline-block;
